[gd_scene load_steps=2 format=3 uid="uid://bo3y5ggmrktu2"]

[ext_resource type="Script" path="res://scripts/ui/victory_screen.gd" id="1_victory"]

[node name="VictoryScreen" type="CanvasLayer"]
script = ExtResource("1_victory")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.15, 0.05, 1)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 48
text = "üéâ VICTORY! üéâ"
horizontal_alignment = 1

[node name="Message" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 28
text = "You saved Kiku forever!"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TimeStat" type="Label" parent="Panel/VBox/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚è±Ô∏è Total Time: 0:00"
horizontal_alignment = 1

[node name="KillsStat" type="Label" parent="Panel/VBox/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üíÄ Total Kills: 0"
horizontal_alignment = 1

[node name="LevelStat" type="Label" parent="Panel/VBox/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚≠ê Final Level: 1"
horizontal_alignment = 1

[node name="UnlockMessage" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 24
text = "‚ú® New Game+ Unlocked! ‚ú®"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CreditsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CREDITS"

[node name="NewGamePlusButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "NEW GAME+"

[node name="MainMenuButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"
